fix(safari): layout wrap issues

--- a/reports/static/css/reports.css
+++ b/reports/static/css/reports.css
@@ -2,6 +2,24 @@
   color: #3d3d3d;
 }
 
+/*Start of stupid safari grid override*/
+@media (min-width: 768px) {
+  .report .col-sm-6 {
+    width: 49.9%;
+  }
+}
+
+@media (min-width: 992px) {
+  .report .col-md-3 {
+    width: 24.9%;
+  }
+
+  .report .col-md-6 {
+    width: 49.9%;
+  }
+}
+/*End of stupid safari grid override*/
+
 @media (min-width: 768px) {
 
   .equal-heights {
